--- a/kitty.conf
+++ b/kitty.conf
@@ -1,7 +1,99 @@
 # vim:fileencoding=utf-8:ft=conf:foldmethod=marker
 
+kitty_mod cmd+shift
+
 #: Font size (in pts)
 font_size 16.0
+
+# TODO: tab management https://sw.kovidgoyal.net/kitty/#tabs-and-windows
+# TODO: startup session https://sw.kovidgoyal.net/kitty/#startup-sessions
+
+#: Window management {{{
+#
+map ctrl+alt+1 first_window
+map ctrl+alt+1 second_window
+map ctrl+alt+1 third_window
+map ctrl+alt+1 fourth_window
+map ctrl+alt+1 fifth_window
+map ctrl+alt+1 sixth_window
+map ctrl+alt+1 seventh_window
+map ctrl+alt+1 eighth_window
+map ctrl+alt+1 ninth_window
+map ctrl+alt+1 tenth_window
+# map cmd+n       new_os_window
+# map kitty_mod+w close_window
+# map shift+cmd+d close_window
+# map kitty_mod+] next_window
+# map kitty_mod+[ previous_window
+# map kitty_mod+f move_window_forward
+# map kitty_mod+b move_window_backward
+# map kitty_mod+` move_window_to_top
+# map kitty_mod+r start_resizing_window
+# map cmd+r       start_resizing_window
+# map kitty_mod+1 first_window
+# map cmd+1       first_window
+# map kitty_mod+2 second_window
+# map cmd+2       second_window
+# map kitty_mod+3 third_window
+# map cmd+3       third_window
+# map kitty_mod+4 fourth_window
+# map cmd+4       fourth_window
+# map kitty_mod+5 fifth_window
+# map cmd+5       fifth_window
+# map kitty_mod+6 sixth_window
+# map cmd+6       sixth_window
+# map kitty_mod+7 seventh_window
+# map cmd+7       seventh_window
+# map kitty_mod+8 eighth_window
+# map cmd+8       eighth_window
+# map kitty_mod+9 ninth_window
+# map cmd+9       ninth_window
+# map kitty_mod+0 tenth_window
+#: }}}
+
+#: Tab management {{{
+#
+map cmd+1       goto_tab 1
+map cmd+2       goto_tab 2
+map cmd+3       goto_tab 3
+map cmd+4       goto_tab 4
+map cmd+5       goto_tab 5
+map cmd+6       goto_tab 6
+map cmd+7       goto_tab 7
+map cmd+8       goto_tab 8
+map cmd+9       goto_tab 9
+map cmd+0       goto_tab 10
+
+# map kitty_mod+right next_tab
+# map ctrl+tab        next_tab
+# map shift+cmd+]     next_tab
+# map kitty_mod+left  previous_tab
+# map shift+ctrl+tab  previous_tab
+# map shift+cmd+[     previous_tab
+# map kitty_mod+t     new_tab
+# map cmd+t           new_tab
+# map kitty_mod+q     close_tab
+# map cmd+w           close_tab
+# map shift+cmd+w     close_os_window
+# map kitty_mod+.     move_tab_forward
+# map kitty_mod+,     move_tab_backward
+# map kitty_mod+alt+t set_tab_title
+# map shift+cmd+i     set_tab_title
+
+#: You can also create shortcuts to go to specific tabs, with 1 being
+#: the first tab, 2 the second tab and -1 being the previously active
+#: tab, and any number larger than the last tab being the last tab::
+
+#:     map ctrl+alt+1 goto_tab 1
+#:     map ctrl+alt+2 goto_tab 2
+
+#: Just as with new_window above, you can also pass the name of
+#: arbitrary commands to run when using new_tab and use
+#: new_tab_with_cwd. Finally, if you want the new tab to open next to
+#: the current tab rather than at the end of the tabs list, use::
+
+#:     map ctrl+t new_tab !neighbor [optional cmd to run]
+#: }}}
 
 #: Color scheme {{{
 ## Solarized Dark Patched
@@ -49,9 +141,6 @@ selection_foreground #001e26
 # color7                #e9e2cb
 # color15               #fcf4dc
 # selection_foreground #001e26
-
-# TODO: tab management https://sw.kovidgoyal.net/kitty/#tabs-and-windows
-# TODO: startup session https://sw.kovidgoyal.net/kitty/#startup-sessions
 
 #: Fonts {{{
 
