kitty startup session and layouts

--- a/kitty.conf
+++ b/kitty.conf
@@ -1,12 +1,11 @@
 # vim:fileencoding=utf-8:ft=conf:foldmethod=marker
 
-kitty_mod cmd+shift
+startup_session ~/kitty_startup_session.conf
 
 #: Font size (in pts)
 font_size 16.0
 
-# TODO: tab management https://sw.kovidgoyal.net/kitty/#tabs-and-windows
-# TODO: startup session https://sw.kovidgoyal.net/kitty/#startup-sessions
+enabled_layouts fat:bias=80;full_size=1;mirrored=false, vertical, horizontal
 
 #: Window management {{{
 #
@@ -20,6 +19,7 @@ map ctrl+alt+1 seventh_window
 map ctrl+alt+1 eighth_window
 map ctrl+alt+1 ninth_window
 map ctrl+alt+1 tenth_window
+
 # map cmd+n       new_os_window
 # map kitty_mod+w close_window
 # map shift+cmd+d close_window
