save other color themes, use solarized dark original

--- a/kitty.conf
+++ b/kitty.conf
@@ -96,6 +96,29 @@ map cmd+0       goto_tab 10
 #: }}}
 
 #: Color scheme {{{
+## Solarized Dark
+background            #001e26
+foreground            #708183
+cursor                #708183
+selection_background  #002731
+color0                #002731
+color8                #001e26
+color1                #d01b24
+color9                #bd3612
+color2                #728905
+color10               #465a61
+color3                #a57705
+color11               #52676f
+color4                #2075c7
+color12               #708183
+color5                #c61b6e
+color13               #5856b9
+color6                #259185
+color14               #81908f
+color7                #e9e2cb
+color15               #fcf4dc
+selection_foreground #001e26
+
 ## Solarized Dark Patched
 # background            #001e26
 # foreground            #708183
@@ -120,27 +143,50 @@ map cmd+0       goto_tab 10
 # selection_foreground #001e26
 
 ## Solarized Dark Higher Contrast
-background            #001e26
-foreground            #9bc1c2
-cursor                #f34a00
-selection_background  #003747
-color0                #002731
-color8                #006388
-color1                #d01b24
-color9                #f4153b
-color2                #6bbe6c
-color10               #50ee84
-color3                #a57705
-color11               #b17e28
-color4                #2075c7
-color12               #178dc7
-color5                #c61b6e
-color13               #e14d8e
-color6                #259185
-color14               #00b29e
-color7                #e9e2cb
-color15               #fcf4dc
-selection_foreground #001e26
+# background            #001e26
+# foreground            #9bc1c2
+# cursor                #f34a00
+# selection_background  #003747
+# color0                #002731
+# color8                #006388
+# color1                #d01b24
+# color9                #f4153b
+# color2                #6bbe6c
+# color10               #50ee84
+# color3                #a57705
+# color11               #b17e28
+# color4                #2075c7
+# color12               #178dc7
+# color5                #c61b6e
+# color13               #e14d8e
+# color6                #259185
+# color14               #00b29e
+# color7                #e9e2cb
+# color15               #fcf4dc
+# selection_foreground #001e26
+
+## Solarized Darkula
+# background #3d3f41
+# foreground #d2d8d9
+# cursor #708183
+# selection_background #214283
+# color0 #25292a
+# color8 #25292a
+# color1 #f24840
+# color9 #f24840
+# color2 #629655
+# color10 #629655
+# color3 #b68800
+# color11 #b68800
+# color4 #2074c7
+# color12 #2074c7
+# color5 #797fd4
+# color13 #797fd4
+# color6 #15968d
+# color14 #15968d
+# color7 #d2d8d9
+# color15 #d2d8d9
+# selection_foreground #3d3f41
 
 #: Fonts {{{
 
