--- a/kitty.conf
+++ b/kitty.conf
@@ -20,6 +20,9 @@ map ctrl+alt+1 eighth_window
 map ctrl+alt+1 ninth_window
 map ctrl+alt+1 tenth_window
 
+map cmd+[ previous_window
+map cmd+] next_window
+
 # map cmd+n       new_os_window
 # map kitty_mod+w close_window
 # map shift+cmd+d close_window
