--- a/kitty.conf
+++ b/kitty.conf
@@ -23,6 +23,7 @@ map ctrl+alt+1 tenth_window
 map cmd+[ previous_window
 map cmd+] next_window
 
+map cmd+enter new_window_with_cwd
 # map cmd+n       new_os_window
 # map kitty_mod+w close_window
 # map shift+cmd+d close_window
