don't use nerd font lightning bolt

--- a/kitty.conf
+++ b/kitty.conf
@@ -1562,7 +1562,8 @@ symbol_map U+F0001-U+F1AF0 Symbols Nerd Font
 symbol_map U+E300-U+E3E3 Symbols Nerd Font
 
 # Octicons
-symbol_map U+F400-U+F532,U+2665,U+26A1 Symbols Nerd Font
+symbol_map U+F400-U+F532,U+2665 Symbols Nerd Font
+# symbol_map U+F400-U+F532,U+2665,U+26A1 Symbols Nerd Font
 
 # Powerline Symbols
 symbol_map U+E0A0-U+E0A2,U+E0B0-U+E0B3 Symbols Nerd Font
