Change git diff algorithm and merge conflict style
Inspired by Julia Evans' post on [popular git config options](https://jvns.ca/blog/2024/02/16/popular-git-config-options/),
this sets the following:

* Use [zdiff3](https://jvns.ca/blog/2024/02/16/popular-git-config-options/#merge-conflictstyle-zdiff3) for more [readable conflicts](https://ductile.systems/zdiff3/).
* Set the diff algorithm to [histogram](https://jvns.ca/blog/2024/02/16/popular-git-config-options/#diff-algorithm-histogram).

--- a/.gitconfig
+++ b/.gitconfig
@@ -22,6 +22,7 @@
 	attributesfile = /Users/kevin/.gitattributes
 [merge]
   ff = only
+  conflictStyle = zdiff3
 [commit]
   template = ~/.gitmessage
 [fetch]
@@ -30,6 +31,7 @@
   autosquash = true
 [diff]
   colorMoved = zebra
+  algorithm = histogram
 [pager]
   branch = cat
 [user]
